@@ -1,5 +1,10 @@
 2008-05-06  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-theme-info.c: (gnome_theme_meta_info_validate): fix error
+	code when GTK engine is missing, and fix the function signature
+
+2008-05-06  Jens Granseuer  <jensgr@gmx.net>
+
 	* Makefile.am:
 	* gnome-theme-info.c: (gnome_theme_info_error_quark),
 	(gnome_theme_meta_info_free), (gnome_theme_meta_info_validate):
